<resources>
    <string name="app_name">Running Pace Calculator</string>
    <string name="choose_distance">Choose distance</string>
    <string name="popular_distance">Popular distances</string>
    <string name="five_distance">5km</string>
    <string name="ten_distance">10km</string>
    <string name="tOne_distance">21km</string>
    <string name="fTwo_distance">42km</string>
    <string name="custom_distance">Custom distance</string>
    <string name="choose_time">choose time</string>
    <string name="calculate">calculate</string>
    <string name="et_hour">HH</string>
    <string name="et_minutes">MM</string>
    <string name="et_seconds">SS</string>
    <string name="rsInitialValue">0KM</string>
    <string name="result">RESULT</string>
    <string name="recalculate">recalculate</string>
    <string name="splits">Splits</string>
    <string name="seconds">seconds</string>
    <string name="minutes">minutes</string>
    <string name="hours">hours</string>
    <string name="result_txt">"Target pace to complete"</string>
    <string name="result_txt_preposition">"in"</string>
</resources>