<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".view.PaceCalculatorActivity">

    <TextView
        android:id="@+id/tvChooseDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/choose_distance"
        android:textAllCaps="true"
        android:textColor="@color/title_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvDistance"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/card_background"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvChooseDistance">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingVertical="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/popular_distance"
                android:textSize="15sp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="12dp"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/btnDistance5"
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@color/btn_background"
                    android:gravity="center"
                    android:text="@string/five_distance"
                    android:textColor="@color/white" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/btnDistance10"
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:backgroundTint="@color/btn_background"
                    android:gravity="center"
                    android:text="@string/ten_distance"
                    android:textColor="@color/white" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:gravity="center">

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/btnDistance21"
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:layout_marginHorizontal="10dp"
                    android:backgroundTint="@color/btn_background"
                    android:gravity="center"
                    android:text="@string/tOne_distance"
                    android:textColor="@color/white" />

                <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                    android:id="@+id/btnDistance42"
                    android:layout_width="76dp"
                    android:layout_height="76dp"
                    android:backgroundTint="@color/btn_background"
                    android:gravity="center"
                    android:text="@string/fTwo_distance"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/custom_distance"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/tvCustomDistance"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:text="@string/rsInitialValue"
                    android:textAllCaps="true"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <com.google.android.material.slider.RangeSlider
                    android:id="@+id/rsDistance"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stepSize="1"
                    android:valueFrom="0"
                    android:valueTo="120"
                    app:thumbColor="@color/emphasis"
                    app:tickColor="@color/white"
                    app:trackColorActive="@color/emphasis"
                    app:trackColorInactive="@color/white">

                </com.google.android.material.slider.RangeSlider>

            </LinearLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/choose_time"
        android:textAllCaps="true"
        android:textColor="@color/title_color"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cvDistance" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cvTime"
        android:layout_width="0dp"
        android:layout_height="90dp"
        android:layout_marginVertical="10dp"
        android:backgroundTint="@color/card_background"
        app:cardCornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTime">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="20dp">

            <EditText
                android:id="@+id/etHours"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/et_hour"
                android:inputType="time"
                android:maxLength="2"
                android:paddingVertical="3dp"
                android:paddingStart="8dp"
                tools:layout_editor_absoluteX="19dp"
                tools:layout_editor_absoluteY="512dp" />

            <EditText
                android:id="@+id/etMinutes"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="12dp"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/et_minutes"
                android:inputType="time"
                android:maxLength="2"
                android:paddingVertical="3dp"
                android:paddingStart="8dp"
                tools:layout_editor_absoluteX="19dp"
                tools:layout_editor_absoluteY="512dp" />

            <EditText
                android:id="@+id/etSeconds"
                android:layout_width="90dp"
                android:layout_height="wrap_content"
                android:background="@drawable/custom_input"
                android:ems="10"
                android:hint="@string/et_seconds"
                android:inputType="time"
                android:maxLength="2"
                android:paddingVertical="3dp"
                android:paddingStart="8dp"
                tools:layout_editor_absoluteX="19dp"
                tools:layout_editor_absoluteY="512dp" />
        </LinearLayout>


    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/emphasis"
        android:text="@string/calculate"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>